# t6-data-analysis

./: .gitignore  README.md  pyproject.toml
data/: Average_Profiling_data_201314_evaluated@10yearNET_v1.0.xlsx  elec_data.json  electricity_hh_data.csv  gas_hh_data.csv  nd-need-2023-data-tables.xlsx  ~$Average_Profiling_data_201314_evaluated@10yearNET_v1.0.xlsx
notebooks/: benchmark.ipynb  carbon_emissions.ipynb  data_analysis.ipynb  dummy_data.ipynb
src/: analytics.py  project_settings.py  schemas.py
