[tool.poetry]
name = "ng-project"
version = "0.1.0"
description = ""
authors = ["CIREGS"]
readme = "README.md"
packages = [{include = "ng_project"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
pytest = "^8.2.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
