[tool.poetry]
name = "ng-project"
version = "0.1.0"
description = ""
authors = ["CIREGS"]
readme = "README.md"
packages = [{include = "ng_project"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
numpy = "^1.26.4"
matplotlib = "^3.8.4"
pydantic-settings = "^2.2.1"
openpyxl = "^3.1.2"
pyarrow = "^16.1.0"
mkdocs = "^1.6.0"
mkdocstrings = {extras = ["python"], version = "^0.25.1"}
mkdocs-material = "^9.5.25"
fastparquet = "^2024.5.0"
seaborn = "^0.13.2"
plotly = "^5.22.0"
nbformat = "^5.10.4"
geopandas = "^0.14.4"

[tool.poetry.group.dev.dependencies]
yapf = "^0.40.2"
pytest = "^8.2.0"
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
